if (CATKIN_ENABLE_TESTING)
 # find_package(glog_catkin REQUIRED)
  catkin_add_gtest(test_cobs test_cobs.cpp)
  catkin_add_gtest(test_datalink test_datalink.cpp loopback.cpp)
  catkin_add_gtest(test_transport test_transport.cpp loopback.cpp)
  target_link_libraries(test_cobs ${PROJECT_NAME} ${catkin_LIBRARIES})
  target_link_libraries(test_datalink ${PROJECT_NAME} ${catkin_LIBRARIES})
  target_link_libraries(test_transport ${PROJECT_NAME} ${catkin_LIBRARIES})
#  SET_TARGET_PROPERTIES(test_cobs PROPERTIES COMPILE_FLAGS "-std=c++11")
endif()